# client-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpp_connect.go  go.mod  golang_build_run.sh  golang_run.sh  php_run.sh  py_run.sh  rebuild_c#.sh  rebuild_go.sh  rebuild_php.sh  rebuild_py.sh  requirements.txt
libdb/: libdb.sln
libdb/libdb/: Program.cs  Startup.cs  libdb.csproj
libdb/libdb/Properties/: launchSettings.json
oldmake/: Makefile.golang  Makefile.php  Makefile.python
src/: callback.py  cpp_connect.py  cpp_ptr.py  main.py
src/cpp/: lib.cpp  lib.h  lib.i  libdb.cpp  libdb.h  libdb.i
src/cpp/async/: libdb.cpp  libdb.h  libdb.i
src/cpp/async_asio_socket/: libdb.cpp  libdb.h
src/cpp/blocking/: libdb.cpp  libdb.h  libdb.i
src/cpp/custom_shared/: libdb.cpp  libdb.h  libdb.i
src/github.com/yarco/swig-playground/: cpp_connect.go  swig-playground
src/php/: cpp_connect.php
src/py/: cpp_connect.py  cpp_ptr.py  cpp_response.py  udp_support.py
src/py/misc/: listen_udp.py  udp.py  udp_endpoint.py
